--- a/web/index.html
+++ b/web/index.html
@@ -9,7 +9,7 @@
   <meta name="apple-mobile-web-app-capable" content="yes">
   <meta name="apple-mobile-web-app-status-bar-style" content="black">
   <meta name="apple-mobile-web-app-title" content="license_scanner_ui">
-  <link rel="apple-touch-icon" href="icons/Icon-192.png">
+  <link rel="apple-touch-icon" href="icons/logo.png">
 
   <!-- Favicon -->
   <link rel="icon" type="image/png" href="favicon.png"/>
